<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:src="@drawable/scan_logo"
        android:contentDescription="logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#5900b3"
        android:textSize="30sp"
        android:text="@string/login_label"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="15dp"
        android:layout_weight="4">
        <EditText
            android:id="@+id/login_edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:inputType="textEmailAddress"
            android:hint="@string/login_h_username"/>
        <EditText
            android:id="@+id/login_edt_password"
            android:layout_width="match_parent"

            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/login_h_password"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:elevation="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/login_btn_signin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:elevation="50dp"
            android:background="@drawable/button_shape"
            android:textColor="#ffffff"
            android:text="@string/login_t_signin"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_t_signup_mess"/>
            <TextView
                android:id="@+id/login_txt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textColor="#57a0d4"
                android:focusable="true"

                android:layout_marginStart="10dp"
                android:text="@string/login_t_signup"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_t_or"/>
            <TextView
                android:id="@+id/login_txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textColor="#57a0d4"
                android:focusable="true"

                android:layout_marginStart="10dp"
                android:text="@string/login_t_forgot"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>